--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,2 +1,11 @@
+// colors
 $accentColor: #0070A0;
 $textColor: #1F1F1F;
+
+// transition
+$transitionDurationFunction: 250ms ease;
+
+// breakpoints
+$small: 576px;
+$medium: 768px;
+$large: 992px;
