--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -5,30 +5,59 @@
 
     &__container {
         display: flex;
+        flex-wrap: wrap;
     }
 
     // .about__title
 
     &__title {
         width: 25%;
-        margin-right: 5%;
         // margin-right: 100px;
+
+        @media screen and (min-width: 993px) {
+            margin-right: 5%;
+        }
+
+        @media screen and (max-width: 992px) {
+            width: 100%;
+            margin-bottom: 30px;
+        }
     }
 
     // .about__list
 
     &__list {
         width: 70%;
-        display: flex;
+
+        @media screen and (min-width: 769px) {
+            display: flex;
+        }
+        // flex-wrap: wrap;
+
+        @media screen and (max-width: 992px) {
+            width: 100%;
+        }
     }
 
     // .about__item
 
     &__item {
-        flex-basis: 33.33333%;
 
-        &:not(:last-child) {
-            margin-right: 32px;
+        @media screen and (min-width: 769px) {
+            flex-basis: calc((100% - 32px * 2) / 3); //
+            
+            &:not(:last-child) {
+                margin-right: 32px;
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            max-width: 576px;
+            margin: 0 auto;
+
+            &:not(:last-child) {
+                margin-bottom: 32px;
+            }
         }
 
         &::before {
