--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -9,18 +9,32 @@
 
     &__list {
         display: flex;
+        flex-wrap: wrap;
 
+        @media screen and (max-width: 768px) {
+            max-width: 576px;
+            margin: 0 auto;
+        }
     }
 
     // .advantage__item
 
     &__item {
         padding: 32px 32px 40px 32px;
-        // flex-basis: calc(100% / 3);
-        flex-basis: 33.33333%;
+        flex-basis: calc((100% - 32px * 2) / 3); //
 
-        &:not(:last-child) {
-            margin-right: 32px;
+        @media screen and (max-width: 768px) {
+            flex-basis: 100%;
+
+            &:not(:last-child) {
+                margin-bottom: 32px;
+            }
+        }
+
+        @media screen and (min-width: 769px) {
+            &:not(:last-child) {
+                margin-right: 32px;
+            }
         }
 
         &::before {
