--- a/sass/components/_blog.scss
+++ b/sass/components/_blog.scss
@@ -11,6 +11,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         margin-bottom: 50px;
     }
 
@@ -40,15 +41,25 @@
 
     &__list {
         display: flex;
+        flex-wrap: wrap;
+        margin: -16px;
+
+        @media screen and (max-width: 768px) {
+            justify-content: center;
+        }
     }
 
     // .blog__item
 
     &__item {
-        flex-basis: 33.33333%;
+        flex-basis: calc((100% - 3 * 32px) / 3);
+        // width: 33.3333%;
+        margin: 16px;
 
-        &:not(:last-child) {
-            margin-right: 32px;
+        @media screen and (max-width: 768px) {
+            flex-basis: 100%;
+            max-width: 576px;
+            // margin: 16px auto;
         }
     }
 }
