--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,11 @@
 .container {
     width: 100%;
-    min-width: 350px;
+    // min-width: 320px;
     max-width: 1160px;
     padding: 0 15px;
     margin: 0 auto;
+
+    // @media screen and (max-width: 320px) {
+    //     width: 320px;
+    // }
 }
