--- a/sass/components/_information.scss
+++ b/sass/components/_information.scss
@@ -6,6 +6,7 @@
 
     &__container {
         display: flex;
+        flex-wrap: wrap;
     }
 
     // .information__contact
@@ -13,6 +14,12 @@
     &__contact {
         flex-grow: 1;
         margin-right: 16px;
+
+        @media screen and (max-width: 768px) {
+            flex-basis: 100%;
+            margin-right: 0;
+            margin-bottom: 30px;
+        }
     }
 
     // .information__logo
@@ -45,15 +52,25 @@
     // .information__menu
 
     &__menu {
-        width: 40%;
+        flex-basis: 40%;
         display: flex;
         margin-right: 16px;
+
+        @media screen and (max-width: 768px) {
+            flex-basis: 50%;
+        }
+
+        @media screen and (max-width: 576px) {
+            flex-basis: 100%;
+            margin-right: 0;
+            margin-bottom: 30px;
+        }
     }
 
     // .information__menu-item
 
     &__menu-item {
-        width: 50%;
+        flex-basis: calc((100% - 16px) / 2);
 
         &:not(:last-child) {
             margin-right: 16px;
@@ -97,16 +114,29 @@
 
         text-decoration: none;
 
+        transition: color $transitionDurationFunction;
+
         &:hover,
         &:focus {
-            text-decoration: underline;
+            color: $accentColor;
         }
     }
 
     // .information__form
 
     &__form {
-        width: 20%;
+        flex-basis: 20%;
+
+        @media screen and (max-width: 768px) {
+            flex-grow: 1;
+        }
+
+        @media screen and (max-width: 576px) {
+            // flex-basis: 60%;
+            flex-basis: 100%;
+            max-width: 320px;
+            flex-grow: 0;
+        }
     }
 
     // .information__form-text
