--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -2,3 +2,15 @@
     font-size: $fontSize;
     line-height: $lineHeight/$fontSize;
 }
+
+@mixin mediaMin($min-width) {
+    @media screen and (min-width: $min-width) {
+        @content;
+    }
+}
+
+@mixin mediaMax($max-width) {
+    @media screen and (max-width: $max-width) {
+        @content;
+    }
+}
