--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -4,13 +4,19 @@
 }
 
 @mixin mediaMin($min-width) {
-    @media screen and (min-width: $min-width) {
+    @media screen and (min-width: ($min-width + 1px)) {
         @content;
     }
 }
 
 @mixin mediaMax($max-width) {
     @media screen and (max-width: $max-width) {
+        @content;
+    }
+}
+
+@mixin mediaMaxMin($max-width, $min-width) {
+    @media screen and (max-width: $max-width) and (min-width: ($min-width + 1px)) {
         @content;
     }
 }
